--- a/Exercise 2/Submission/advanced-db-exercise_2.rmd
+++ b/Exercise 2/Submission/advanced-db-exercise_2.rmd
@@ -88,6 +88,27 @@ STORED AS TEXTFILE
 LOCATION '/home/adbs/2019S/shared/hive/badges.csv';
 ```
 
+**b)**
+Placeholder
+
+**c)**
+Because Hive does not support subqueries and also does not support unequal semi join we have to replace EXISTS with JOIN and then filter the condition in where clause.
+And for count we place it in a table and for filtering also call it in WHERE clause.
+```
+SELECT p.id
+FROM comments c, badges_tmp b, 
+posts p JOIN postlinks pl ON pl.postid = p.id,
+users u, (SELECT COUNT(upvotes) as nrupvotes FROM users) k
+WHERE c.postid=p.id 
+AND u.upvotes + 3 >= k.nrupvotes
+AND u.id=p.owneruserid 
+AND pl.relatedpostid > p.id
+AND u.creationdate = c.creationdate  
+AND u.id = b.userid 
+AND (b.name LIKE 'Autobiographer');
+```
+
+
 ## Exercise 5 (Spark in Scala) [4 Punkte]
 
 Placeholder
