--- a/Exercise 2/Submission/advanced-db-exercise_2.tex
+++ b/Exercise 2/Submission/advanced-db-exercise_2.tex
@@ -140,14 +140,15 @@ lifting takes place in the reducer, where a hashmap of all the titles of
 the current creator is created and for each value in our values list the
 number of checkouts is updated for the corresponding title. After having
 iterated all the values, the title with the maximum amount of checkouts
-is written out with it's corresponding author.
+is written out with it's corresponding author \textless{}Author, Most
+Checkouts Book Title\textgreater{}.
 
 Statistics:
 
 \begin{itemize}
 \tightlist
 \item
-  replication rate = ???
+  replication rate = 1
 \item
   input size = 6789 Mbyte
 \item
@@ -167,20 +168,22 @@ Statistics:
 you to create MapReduce jobs with multiple mapper functions, each for a
 different input file. The results of the mappers is then sent to the
 same reducer function. For the two datasets we've created two separate
-mappers which send the row with the author as key to the reducer. The
-reducer then creates two HashMaps, for both checkouts and inventory.
-Checkout HashMap includes all the titles and sums up the checkouts for
-each title. After that it selects the title with max checkouts and
-creates Author, Title TextPair and adds PublicationYear, Subjects,
-ItemLocation from the second HashMap where all the locations for all
-titles of said Author are stored.
+mappers which send the row with the author as key to the reducer
+\textless{}Author, Row\textgreater{}. The reducer then creates two
+HashMaps, for both checkouts and inventory. Checkout HashMap includes
+all the titles and sums up the checkouts for each title. After that it
+selects the title with max checkouts and creates Author, Title TextPair
+and adds PublicationYear, Subjects, ItemLocation from the second HashMap
+where all the locations for all titles of said Author are stored
+\textless{}Author, Most Checkouts Book Title, Publication Year,
+Subjects, Item Location\textgreater{}.
 
 Statistics:
 
 \begin{itemize}
 \tightlist
 \item
-  replication rate = ???
+  replication rate = 1
 \item
   input = 13944 Mbyte
 \item
@@ -298,6 +301,10 @@ output key and sum as value.
 \end{Highlighting}
 \end{Shaded}
 
+Communication cost = input file size + 2 ×(sum of the sizes of all files
+passed from Map processes to Reduce processes) + the sum of the output
+sizes of the Reduce processes.
+
 \newpage
 
 \hypertarget{exercise-4-hive-exercise-4-punkte}{%
@@ -324,19 +331,19 @@ support unequal semi join we have to replace EXISTS with JOIN and then
 filter the condition in where clause. And for count we place it in a
 table and for filtering also call it in WHERE clause.
 
-\begin{verbatim}
-SELECT p.id
-FROM comments c, badges_tmp b, 
-posts p JOIN postlinks pl ON pl.postid = p.id,
-users u, (SELECT COUNT(upvotes) as nrupvotes FROM users) k
-WHERE c.postid=p.id 
-AND u.upvotes + 3 >= k.nrupvotes
-AND u.id=p.owneruserid 
-AND pl.relatedpostid > p.id
-AND u.creationdate = c.creationdate  
-AND u.id = b.userid 
-AND (b.name LIKE 'Autobiographer');
-\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{SELECT}\NormalTok{ p.}\KeywordTok{id}
+\KeywordTok{FROM}\NormalTok{ comments c, badges_tmp b, posts p, postlinks pl, users u, (}\KeywordTok{SELECT} \FunctionTok{COUNT}\NormalTok{(upvotes) }\KeywordTok{as}\NormalTok{ nrupvotes }\KeywordTok{FROM}\NormalTok{ users) k}
+\KeywordTok{WHERE}\NormalTok{ c.postid}\OperatorTok{=}\NormalTok{p.}\KeywordTok{id} 
+\KeywordTok{AND}\NormalTok{ u.upvotes }\OperatorTok{+} \DecValTok{3} \OperatorTok{>=}\NormalTok{ k.nrupvotes}
+\KeywordTok{AND}\NormalTok{ u.}\KeywordTok{id}\OperatorTok{=}\NormalTok{p.owneruserid }
+\KeywordTok{AND}\NormalTok{ pl.relatedpostid }\OperatorTok{>}\NormalTok{ p.}\KeywordTok{id}
+\KeywordTok{AND}\NormalTok{ u.creationdate }\OperatorTok{=}\NormalTok{ c.creationdate  }
+\KeywordTok{AND}\NormalTok{ u.}\KeywordTok{id} \OperatorTok{=}\NormalTok{ b.userid }
+\KeywordTok{AND}\NormalTok{ (b.name }\KeywordTok{LIKE} \StringTok{'Autobiographer'}\NormalTok{);}
+\end{Highlighting}
+\end{Shaded}
 
 \newpage
 
@@ -344,20 +351,15 @@ AND (b.name LIKE 'Autobiographer');
 \subsection{Exercise 5 (Spark in Scala) {[}4
 Punkte{]}}\label{exercise-5-spark-in-scala-4-punkte}}
 
-\textbf{b)}
+\textbf{b)} As displayed in Figure 9, we can see that most of the time
+the Dataframe API variant of the query outperforms the SQL version in
+duration. Although analyzing and interpreting the results didn't make
+much sense. Most of the times the explanation plans look, and are, the
+same. Except for Query 5, which we couldn't figure out why.
 
 \begin{figure}[h]
 
 {\centering \includegraphics[width=300px]{images/query1} 
-
-}
-
-\caption{\label{fig:figs}LEFT: SQL DAG Diagram. RIGHT: Dataframe API DAG Diagram}\label{fig:unnamed-chunk-6}
-\end{figure}
-
-\begin{figure}[h]
-
-{\centering \includegraphics[width=300px]{images/query2} 
 
 }
 
@@ -366,7 +368,7 @@ Punkte{]}}\label{exercise-5-spark-in-scala-4-punkte}}
 
 \begin{figure}[h]
 
-{\centering \includegraphics[width=300px]{images/query3} 
+{\centering \includegraphics[width=300px]{images/query2} 
 
 }
 
@@ -375,7 +377,7 @@ Punkte{]}}\label{exercise-5-spark-in-scala-4-punkte}}
 
 \begin{figure}[h]
 
-{\centering \includegraphics[width=300px]{images/query4} 
+{\centering \includegraphics[width=300px]{images/query3} 
 
 }
 
@@ -384,7 +386,7 @@ Punkte{]}}\label{exercise-5-spark-in-scala-4-punkte}}
 
 \begin{figure}[h]
 
-{\centering \includegraphics[width=300px]{images/query5} 
+{\centering \includegraphics[width=300px]{images/query4} 
 
 }
 
@@ -393,11 +395,20 @@ Punkte{]}}\label{exercise-5-spark-in-scala-4-punkte}}
 
 \begin{figure}[h]
 
+{\centering \includegraphics[width=300px]{images/query5} 
+
+}
+
+\caption{\label{fig:figs}LEFT: SQL DAG Diagram. RIGHT: Dataframe API DAG Diagram}\label{fig:unnamed-chunk-11}
+\end{figure}
+
+\begin{figure}[h]
+
 {\centering \includegraphics[width=300px]{images/Query Duration Comparison} 
 
 }
 
-\caption{\label{fig:figs}Query Duration Comparison}\label{fig:unnamed-chunk-11}
+\caption{\label{fig:figs}Query Duration Comparison}\label{fig:unnamed-chunk-12}
 \end{figure}
 
 \textbf{c)}
@@ -424,7 +435,7 @@ multiple child partitions.
 
 }
 
-\caption{\label{fig:figs}Wide and Narrow Dependencies Visualisation}\label{fig:unnamed-chunk-12}
+\caption{\label{fig:figs}Wide and Narrow Dependencies Visualisation}\label{fig:unnamed-chunk-13}
 \end{figure}
 
 
