--- a/Exercise 3/Submission/Exercise 3.rmd
+++ b/Exercise 3/Submission/Exercise 3.rmd
@@ -105,7 +105,7 @@ Requirements:
   - Asking if any edition of a book is currently available to be borrowed. (i.e., owned - borrowed but not yet returned books > 0)
 - The borrowed relation is updated frequently (and needs to be efficient). For all other relations, updates are rare and can be more expensive.
 
-To solve the requirements the tables firstly were transformed into separate JSON objects. After analyzing both queries we deciced that the first query can be answered in whole by the `Borrowed` collection only and therefore doesn't need any further optimization. For the second query we decided to add a new field to the `Edition` collection named `borrowedby` which keeps track of the people who have the current document (Book Edition) borrowed and not yet returned. This allows for a quick calculation of the available books by substracting the length of the `borrowedby` array to the `owned` value.
+To solve the requirements the tables firstly were transformed into separate JSON objects. After analyzing both queries we deciced that the first query can be answerd by the relation `BorrowedBooks` where we save all the books that are borrowed and not returned yet, also we have another relation `ReturnedBooks` where we save the history of returned books, in this way we save time during searching phase because there are less rows to check for each book that is not returned yet. For the second query we decided to add a new field to the `Edition` collection named `borrowedby` which keeps track of the people who have the current document (Book Edition) borrowed and not yet returned. This allows for a quick calculation of the available books by substracting the length of the `borrowedby` array to the `owned` value.
 
 Although this quick calculation comes with a price. that everytime a book is returned the `Edition` with its `borrowedby` field has to be updated.
 
